--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="//cdn.ons.gov.uk/sixteens/6a9b674/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="noindex">
+
     <meta
       name="description"
       content="Web site created using create-react-app"
